<resources>
    <string name="app_name">Money Manager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_dues">Dues</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_history">History</string>
    <string name="menu_settings">settings</string>

    <string name="add_new_due">Add new due</string>
    <!--  Add new Due page labels  -->
    <string name="contact_label">Select Contact</string>
    <string name="amount_label">Enter amount</string>
    <string name="lent_text">Lent?</string>
    <string name="lent_help_text">Check this option if you have owed money to someone.</string>
    <string name="lend_label">Lent</string>
    <string name="date_label">Date(Optional)</string>
    <string name="notes_label">Notes(optional)</string>
    <string name="submit_label">Submit</string>
    <string name="TAG">MoneyManager</string>

    <!--Error messages-->
    <string name="contact_name_error">Contact name is required</string>
    <string name="amount_error">Amount is required</string>
    <string name="amount_less_than_zero_error">Amount should be greater than zero</string>

    <string name="Rs">\u20B9</string>

    <string name="due_delete_label">Delete due</string>
</resources>
