<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dues">

    <fragment
        android:id="@+id/nav_dues"
        android:name="in.slwsolutions.moneymanager.ui.home.HomeFragment"
        android:label="@string/menu_dues"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="in.slwsolutions.moneymanager.ui.gallery.GalleryFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_history"
        android:name="in.slwsolutions.moneymanager.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="in.slwsolutions.moneymanager.ui.tools.ToolsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_tools" />

</navigation>